@@ -3,7 +3,6 @@ package ti4.helpers;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
 import net.dv8tion.jda.api.components.actionrow.ActionRow;
@@ -39,8 +38,8 @@ import ti4.message.componentsV2.MessageV2Builder;
 import ti4.model.FactionModel;
 import ti4.model.LeaderModel;
 import ti4.model.MapTemplateModel;
-import ti4.model.Source.ComponentSource;
 import ti4.model.StrategyCardModel;
+import ti4.model.TechnologyModel;
 import ti4.model.TechnologyModel.TechnologyType;
 import ti4.model.UnitModel;
 import ti4.service.VeiledHeartService;
@@ -64,16 +63,15 @@ import ti4.service.unit.RemoveUnitService;
 
 public final class ButtonHelperTwilightsFall {
 
-    public static boolean checkForQueuedSplicePick(Player privatePlayer, Game game) {
-        Player player = privatePlayer;
-        String alreadyQueued = game.getStoredValue(player.getFaction() + "splicequeue");
+    private static boolean checkForQueuedSplicePick(Player privatePlayer, Game game) {
+        String alreadyQueued = game.getStoredValue(privatePlayer.getFaction() + "splicequeue");
         if (!alreadyQueued.isEmpty()) {
             String unpickedSpliceCard = "";
             for (String spliceCard : alreadyQueued.split("_")) {
-                if (!player.isNpc()) {
+                if (!privatePlayer.isNpc()) {
                     game.setStoredValue(
-                            player.getFaction() + "splicequeue",
-                            game.getStoredValue(player.getFaction() + "splicequeue")
+                            privatePlayer.getFaction() + "splicequeue",
+                            game.getStoredValue(privatePlayer.getFaction() + "splicequeue")
                                     .replace(spliceCard + "_", ""));
                 }
                 List<String> cards = getSpliceCards(game);
@@ -86,21 +84,21 @@ public final class ButtonHelperTwilightsFall {
             }
             if (unpickedSpliceCard.isEmpty()) {
                 MessageHelper.sendMessageToChannel(
-                        player.getCardsInfoThread(),
+                        privatePlayer.getCardsInfoThread(),
                         "Tried to pick your queued splice card, but they were all already taken.");
                 return false;
             } else {
                 MessageHelper.sendMessageToChannel(
                         privatePlayer.getCorrectChannel(),
                         privatePlayer.getRepresentation(false, false) + " had queued a splice pick.");
-                selectASpliceCard(game, player, "selectASpliceCard_" + unpickedSpliceCard, null);
+                selectASpliceCard(game, privatePlayer, "selectASpliceCard_" + unpickedSpliceCard, null);
                 return true;
             }
         }
         return false;
     }
 
-    public static List<Button> getQueueSplicePickButtons(Game game, Player player) {
+    private static List<Button> getQueueSplicePickButtons(Game game, Player player) {
         String type = game.getStoredValue("spliceType");
         List<String> cards = getSpliceCards(game);
         List<String> nCards = new ArrayList<>(cards);
@@ -114,7 +112,7 @@ public final class ButtonHelperTwilightsFall {
         return buttons;
     }
 
-    public static String getQueueSpliceMessage(Game game, Player player) {
+    private static String getQueueSpliceMessage(Game game, Player player) {
         int number = getParticipantsList(game).indexOf(player) + 1;
         String alreadyQueued = game.getStoredValue(player.getFaction() + "splicequeue");
         int numQueued = alreadyQueued.split("_").length;
@@ -422,7 +420,12 @@ public final class ButtonHelperTwilightsFall {
     }
 
     // @ButtonHandler("initiateASplice_")
-    public static void initiateASplice(Game game, Player startPlayer, String buttonID, List<Player> participants) {
+    public static void initiateASplice(
+            GenericInteractionCreateEvent event,
+            Game game,
+            Player startPlayer,
+            String buttonID,
+            List<Player> participants) {
         String spliceType = buttonID;
         if (buttonID.contains("_")) {
             spliceType = buttonID.split("_")[1];
@@ -442,19 +445,7 @@ public final class ButtonHelperTwilightsFall {
             // Cleans up any dirty values left over from e.g. playing Engineer without finishing the splice
             game.removeStoredValue("engineerACSplice");
         }
-        for (Player player2 : game.getRealPlayers()) {
-            if (game.getStoredValue("Reverse Splice") != null
-                    && game.getStoredValue("Reverse Splice").contains(player2.getFaction())
-                    && player2.getPlayableActionCards().contains("tf-reverse")) {
-                ActionCardHelper.playAC(null, game, player2, "tf-reverse", game.getMainGameChannel());
-            }
-            if (game.getStoredValue("Manipulate Splice") != null
-                    && game.getStoredValue("Manipulate Splice").contains(player2.getFaction())
-                    && player2.getPlayableActionCards().contains("tf-manipulate")
-                    && !participants.contains(player2)) {
-                ActionCardHelper.playAC(null, game, player2, "tf-manipulate", game.getMainGameChannel());
-            }
-        }
+
         if (!game.getStoredValue("paid6ForSplice").isEmpty()) {
             participants.add(startPlayer);
             game.removeStoredValue("paid6ForSplice");
@@ -502,10 +493,23 @@ public final class ButtonHelperTwilightsFall {
                     getQueueSpliceMessage(game, player2),
                     getQueueSplicePickButtons(game, player2));
         }
+        for (Player player2 : game.getRealPlayers()) {
+            if (game.getStoredValue("Reverse Splice") != null
+                    && game.getStoredValue("Reverse Splice").contains(player2.getFaction())
+                    && player2.getPlayableActionCards().contains("tf-reverse")) {
+                ActionCardHelper.playAC(event, game, player2, "tf-reverse", game.getMainGameChannel());
+            }
+            if (game.getStoredValue("Manipulate Splice") != null
+                    && game.getStoredValue("Manipulate Splice").contains(player2.getFaction())
+                    && player2.getPlayableActionCards().contains("tf-manipulate")
+                    && !participants.contains(player2)) {
+                ActionCardHelper.playAC(event, game, player2, "tf-manipulate", game.getMainGameChannel());
+            }
+        }
     }
 
     public static void reverseSpliceOrder(Game game) {
-        List<Player> participants = new ArrayList<Player>();
+        List<Player> participants = new ArrayList<>();
         for (String faction : game.getStoredValue("savedParticipants").split("_")) {
             if (game.getPlayerFromColorOrFaction(faction) != null)
                 participants.add(game.getPlayerFromColorOrFaction(faction));
@@ -514,7 +518,10 @@ public final class ButtonHelperTwilightsFall {
             Collections.rotate(participants, -2);
         }
         Collections.reverse(participants);
-        if (participants.getFirst() != participants.getLast()) {
+        if (participants.getFirst() != participants.getLast()
+                || (participants.size() > 2
+                        && participants.get(2) != participants.get(0)
+                        && participants.get(1) == participants.get(0))) {
             Collections.rotate(participants, 1);
         }
         game.removeStoredValue("savedParticipants");
@@ -528,13 +535,12 @@ public final class ButtonHelperTwilightsFall {
         }
         MessageHelper.sendMessageToChannel(
                 game.getMainGameChannel(),
-                "The splice order has been reversed. The new order is: "
-                        + ButtonHelperTwilightsFall.getSpliceOrderString(participants));
+                "The splice order has been reversed. The new order is: " + getSpliceOrderString(participants));
 
         game.removeStoredValue("reverseSpliceOrder");
     }
 
-    public static String getSpliceOrderString(List<Player> participants) {
+    private static String getSpliceOrderString(List<Player> participants) {
         StringBuilder sb = new StringBuilder();
         int count = 1;
         for (Player p : participants) {
@@ -565,7 +571,7 @@ public final class ButtonHelperTwilightsFall {
         return players;
     }
 
-    public static void sendPlayerSpliceOptions(Game game, Player player) {
+    private static void sendPlayerSpliceOptions(Game game, Player player) {
         String type = game.getStoredValue("spliceType");
 
         List<String> cards = getSpliceCards(game);
@@ -586,7 +592,7 @@ public final class ButtonHelperTwilightsFall {
                 selectASpliceCard(
                         game,
                         player,
-                        buttons.getFirst().getCustomId().replace(player.getFinsFactionCheckerPrefix(), ""),
+                        buttons.getFirst().getCustomId().replace(player.factionButtonChecker(), ""),
                         null);
             } else {
                 if (game.isVeiledHeartMode()) {
@@ -669,7 +675,7 @@ public final class ButtonHelperTwilightsFall {
             }
             game.removeStoredValue("willParticipateInSplice");
         }
-        initiateASplice(game, player, spliceType, participants);
+        initiateASplice(event, game, player, spliceType, participants);
     }
 
     public static void triggerYellowUnits(Game game, Player player) {
@@ -807,7 +813,7 @@ public final class ButtonHelperTwilightsFall {
                         MessageHelper.sendMessageToChannelWithEmbed(
                                 player.getCorrectChannel(),
                                 player.getRepresentation() + " has spliced in the "
-                                        + Mapper.getLeader(cardID).getTFNameIfAble() + " genome.",
+                                        + Mapper.getLeader(cardID).getTFNameIfAble() + ".",
                                 Mapper.getLeader(cardID).getRepresentationEmbed(false, true, false, false, true));
                     }
                     if ("units".equalsIgnoreCase(type)) {
@@ -1037,16 +1043,8 @@ public final class ButtonHelperTwilightsFall {
             }
         }
 
-        List<String> allCards = Mapper.getDeck("tf_paradigm").getNewShuffledDeck();
-        List<String> alreadyDrawn =
-                List.of(game.getStoredValue("savedParadigms").split("_"));
-        for (String card : alreadyDrawn) {
-            if ("hacanhero".equalsIgnoreCase(card)) {
-                allCards.remove("sanctionhero");
-            }
-            allCards.remove(card);
-        }
-        String paradigm = allCards.removeFirst();
+        List<String> paradigms = game.getParadigmSpliceDeck(false);
+        String paradigm = paradigms.getFirst();
         drawSpecificParadigm(game, player, paradigm);
         if (!scPara && artifice) {
             if (game.getStoredValue("artificeParadigms").isEmpty()) {
@@ -1059,7 +1057,8 @@ public final class ButtonHelperTwilightsFall {
 
     public static boolean drawSpecificParadigm(
             Game game, Player player, String paradigm, boolean checkDeck, boolean checkDrawn) {
-        if (checkDeck && !Mapper.getDeck("tf_paradigm").getNewDeck().contains(paradigm)) {
+        if (checkDeck
+                && !Mapper.getDeck(game.getParadigmSpliceDeckID()).getNewDeck().contains(paradigm)) {
             return false;
         }
         if (checkDrawn
@@ -1070,7 +1069,7 @@ public final class ButtonHelperTwilightsFall {
         return true;
     }
 
-    public static void drawSpecificParadigm(Game game, Player player, String paradigm) {
+    private static void drawSpecificParadigm(Game game, Player player, String paradigm) {
         String valueToStore = game.getStoredValue("savedParadigms");
         if (!valueToStore.isEmpty()) {
             valueToStore += "_";
@@ -1095,19 +1094,19 @@ public final class ButtonHelperTwilightsFall {
         }
     }
 
-    public static List<Button> getSpliceButtons(Game game, String type, List<String> cards, Player player) {
+    private static List<Button> getSpliceButtons(Game game, String type, List<String> cards, Player player) {
         return getSpliceButtons(game, type, cards, player, "selectASpliceCard_");
     }
 
     public static List<Button> getSpliceButtons(
             Game game, String type, List<String> cards, Player player, String prefix) {
         List<Button> buttons = new ArrayList<>();
-        if (cards.size() > 0) {
+        if (!cards.isEmpty()) {
             if ("ability".equalsIgnoreCase(type)) {
                 for (String card : cards) {
                     String name = Mapper.getTech(card).getName();
                     buttons.add(Buttons.green(
-                            player.getFinsFactionCheckerPrefix() + prefix + card,
+                            player.factionButtonChecker() + prefix + card,
                             name,
                             Mapper.getTech(card).getSingleTechEmoji()));
                 }
@@ -1121,9 +1120,7 @@ public final class ButtonHelperTwilightsFall {
                     }
                     FactionModel factionModel = Mapper.getFaction(faction);
                     buttons.add(Buttons.green(
-                            player.getFinsFactionCheckerPrefix() + prefix + card,
-                            name,
-                            factionModel.getFactionEmoji()));
+                            player.factionButtonChecker() + prefix + card, name, factionModel.getFactionEmoji()));
                 }
             }
             if ("units".equalsIgnoreCase(type)) {
@@ -1131,7 +1128,7 @@ public final class ButtonHelperTwilightsFall {
                     if (Mapper.getUnit(card) != null) {
                         String name = Mapper.getUnit(card).getName();
                         buttons.add(Buttons.green(
-                                player.getFinsFactionCheckerPrefix() + prefix + card,
+                                player.factionButtonChecker() + prefix + card,
                                 name,
                                 Mapper.getUnit(card).getUnitEmoji()));
                     } else {
@@ -1145,15 +1142,11 @@ public final class ButtonHelperTwilightsFall {
         if (!game.getStoredValue("engineerACSplice").startsWith("remove") && !prefix.contains("manipulate")) {
             if (!player.hasTech("wavelength")) {
                 buttons.add(Buttons.green(
-                        player.getFinsFactionCheckerPrefix() + prefix + "wavelength",
-                        "Wavelength",
-                        TechEmojis.GenericTF));
+                        player.factionButtonChecker() + prefix + "wavelength", "Wavelength", TechEmojis.GenericTF));
             }
             if (!player.hasTech("antimatter")) {
                 buttons.add(Buttons.green(
-                        player.getFinsFactionCheckerPrefix() + prefix + "antimatter",
-                        "Antimatter",
-                        TechEmojis.GenericTF));
+                        player.factionButtonChecker() + prefix + "antimatter", "Antimatter", TechEmojis.GenericTF));
             }
         }
         return buttons;
@@ -1239,20 +1232,9 @@ public final class ButtonHelperTwilightsFall {
         TechnologyType type = Mapper.getTech(cardID).getFirstType();
 
         List<MessageEmbed> embeds = new ArrayList<>();
-        List<String> allCards = Mapper.getDeck("techs_tf").getNewShuffledDeck();
-        for (Player p : game.getRealPlayers()) {
-            for (String tech : p.getTechs()) {
-                allCards.remove(tech);
-            }
-        }
-        List<String> someCardList = new ArrayList<>(allCards);
-        for (String card : someCardList) {
-            if (game.getStoredValue("purgedAbilities").contains("_" + card)) {
-                allCards.remove(card);
-            }
-        }
+
+        List<String> allCards = game.getAbilitySpliceDeck(false);
         String found = "nothing applicable";
-        Collections.shuffle(allCards);
         for (String card : allCards) {
             embeds.add(Mapper.getTech(card).getRepresentationEmbed());
             if (Mapper.getTech(card).getFirstType() == type) {
@@ -1297,7 +1279,7 @@ public final class ButtonHelperTwilightsFall {
         }
         if ("units".equalsIgnoreCase(type)) {
             for (String unit : player.getUnitsOwned()) {
-                if (unit.contains("tf_")) {
+                if (unit.contains("tf_") || (!unit.contains("tf-") && !unit.contains("tk-"))) {
                     continue;
                 }
                 buttons.add(Buttons.red(
@@ -1438,7 +1420,7 @@ public final class ButtonHelperTwilightsFall {
                                     || unit.getUpgradesFromUnitId().isEmpty())
                             .toList();
                     for (UnitModel u : unitsToRemove) {
-                        if (u.getAlias().contains("tf-")) {
+                        if (u.getAlias().contains("tf-") || u.getAlias().contains("tk-")) {
                             List<Button> buttons = new ArrayList<>();
                             buttons.add(Buttons.green("keepUnit_" + u.getAlias(), "Keep " + u.getName()));
                             buttons.add(Buttons.red("deleteButtons", "Keep the New Unit"));
@@ -1492,85 +1474,49 @@ public final class ButtonHelperTwilightsFall {
         }
     }
 
+    public static void drawAbilityFromDeck(Game game, Player player) {
+        List<String> deck = game.getAbilitySpliceDeck(true);
+        if (deck.isEmpty()) {
+            String messageText = "There are no more cards in the ability deck.";
+            MessageHelper.sendMessageToChannel(player.getCorrectChannel(), messageText);
+            return;
+        }
+
+        String drawnCard = deck.getFirst();
+        player.addTech(drawnCard);
+        if (!game.isVeiledHeartMode()) {
+            TechnologyModel model = Mapper.getTech(drawnCard);
+            String msg = player.getRepresentation() + " has acquired the ability: " + model.getName();
+            MessageHelper.sendMessageToChannelWithEmbed(
+                    player.getCorrectChannel(), msg, model.getRepresentationEmbed());
+        } else {
+            game.setStoredValue(
+                    "veiledCards" + player.getFaction(),
+                    game.getStoredValue("veiledCards" + player.getFaction()) + drawnCard + "_");
+            MessageHelper.sendMessageToChannel(
+                    player.getCorrectChannel(),
+                    player.getRepresentationNoPing()
+                            + " has taken a secret card. They may put it into play with a button in their `#cards-info` thread.");
+        }
+    }
+
     public static List<String> getDeckForSplicing(Game game, String type, int size) {
         return getDeckForSplicing(game, type, size, false);
     }
 
-    public static List<String> getDeckForSplicing(Game game, String type, int size, boolean includeVeiledCards) {
+    private static List<String> getDeckForSplicing(Game game, String type, int size, boolean includeVeiledCards) {
         List<String> cards = new ArrayList<>();
         List<String> allCards = new ArrayList<>();
         if ("ability".equalsIgnoreCase(type)) {
-            allCards = Mapper.getDeck("techs_tf").getNewShuffledDeck();
-            for (Player p : game.getRealPlayersNNeutral()) {
-                for (String tech : p.getTechs()) {
-                    allCards.remove(tech);
-                }
-                for (String tech : p.getPurgedTechs()) {
-                    allCards.remove(tech);
-                }
-            }
-            List<String> someCardList = new ArrayList<>(allCards);
-            for (String card : someCardList) {
-                if (game.getStoredValue("purgedAbilities").contains("_" + card)) {
-                    allCards.remove(card);
-                }
-            }
+            allCards = game.getAbilitySpliceDeck(includeVeiledCards);
+        } else if ("genome".equalsIgnoreCase(type)) {
+            allCards = game.getGenomeSpliceDeck(includeVeiledCards);
+        } else if ("units".equalsIgnoreCase(type)) {
+            allCards = game.getUnitSpliceDeck(includeVeiledCards);
+        } else if ("paradigm".equalsIgnoreCase(type)) {
+            allCards = game.getParadigmSpliceDeck(includeVeiledCards);
         }
-        if ("genome".equalsIgnoreCase(type)) {
-            allCards = Mapper.getDeck("tf_genome").getNewShuffledDeck();
-            for (Player p : game.getRealPlayersNNeutral()) {
-                for (String tech : p.getLeaderIDs()) {
-                    allCards.remove(tech);
-                }
-            }
-        }
-        if ("units".equalsIgnoreCase(type)) {
-            Map<String, UnitModel> allUnits = Mapper.getUnits();
-            for (Map.Entry<String, UnitModel> entry : allUnits.entrySet()) {
-                UnitModel mod = entry.getValue();
-                if (mod.getFaction().isPresent() && mod.getSource() == ComponentSource.twilights_fall) {
-                    FactionModel faction = Mapper.getFaction(mod.getFaction().get());
-                    if (faction != null && faction.getSource() != ComponentSource.twilights_fall) {
-                        allCards.add(entry.getKey());
-                    }
-                }
-            }
-            for (Player p : game.getRealPlayersNNeutral()) {
-                for (String unit : p.getUnitsOwned()) {
-                    allCards.remove(unit);
-                }
-            }
-            Collections.shuffle(allCards);
-        }
-        if ("paradigm".equalsIgnoreCase(type)) {
-            allCards = Mapper.getDeck("tf_paradigm").getNewShuffledDeck();
-            List<String> alreadyDrawn =
-                    List.of(game.getStoredValue("savedParadigms").split("_"));
-            for (String card : alreadyDrawn) {
-                // savedParadigms includes veiled paradigms, which should only be removed if includeVeiledCards is false
-                boolean shouldRemove = true;
-                if (game.isVeiledHeartMode() & includeVeiledCards) {
-                    for (Player p2 : game.getRealPlayers()) {
-                        if (game.getStoredValue("veiledCards" + p2.getFaction()).contains(card)) {
-                            shouldRemove = false;
-                            break;
-                        }
-                    }
-                }
-                if (shouldRemove) {
-                    allCards.remove(card);
-                }
-            }
-        } else if (game.isVeiledHeartMode() && !includeVeiledCards) {
-            List<String> someCardList = new ArrayList<>(allCards);
-            for (String card : someCardList) {
-                for (Player p2 : game.getRealPlayers()) {
-                    if (game.getStoredValue("veiledCards" + p2.getFaction()).contains(card)) {
-                        allCards.remove(card);
-                    }
-                }
-            }
-        }
+
         for (int i = 0; i < size && !allCards.isEmpty(); i++) {
             cards.add(allCards.removeFirst());
         }
@@ -1578,7 +1524,7 @@ public final class ButtonHelperTwilightsFall {
         return cards;
     }
 
-    public static void setNewSpliceCards(Game game, String type, int size) {
+    private static void setNewSpliceCards(Game game, String type, int size) {
         List<String> cards = getDeckForSplicing(game, type, size);
         game.removeStoredValue("savedSpliceCards");
         for (String card : cards) {
